hydra/example-idp/hydra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
spec:
  template:
    spec:
      containers:
      - name: hydra
