hydra/example-idp/idp-service-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-idp-test-connection
spec:
  containers:
  - image: busybox
    name: wget
    command:
    - wget
    args:
    - example-idp:3000
  restartPolicy: Never
