hydra/example-idp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-idp
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: example-idp
    app.kubernetes.io/part-of: hydra-example-idp
  type: ClusterIP
