hydra/example-idp/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-idp
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca-issuer
    hostname: idp.hydra.example.org
spec:
  rules:
  - host: $(IDP_HOSTNAME)
    http:
      paths:
      - backend:
          serviceName: example-idp
          servicePort: http
        path: /
  tls:
  - hosts:
    - $(IDP_HOSTNAME)
    secretName: hydra-idp-tls
